# system-zero

./: .gitignore  PROTOCOL_SPEC.md  README.md  install.sh  modules-inventory.json  pyproject.toml
.atl/: delta-approval-gate.md  delta-claude-skills-sync.md  delta-persistent-memory.md  delta-sdd-orchestrator.md  skill-registry.md
.test-reports/: phase-12.json  phase-13.json  phase-14.json  phase-16-absorb-probes.json  phase-16-absorb-results.json  phase-16-module-repos.json  phase-16.json
brew/: system-zero.rb
catalog/: index.json
catalog/scripts/: build-index.py
cloud/: Dockerfile  Dockerfile.prelaunch  Makefile  fly.toml
cloud/app/: main.py
cloud/catalog/: index.json
cloud/migrations/: 001_init.sql
cloud/tests/: conftest.py  test_billing_flow.py  test_cli_cloud_commands.py  test_container_smoke.py  test_endpoints.py  test_free_tier_silent.py
launch/: announce.md
modules/action-card-cleanup-ce/: entry.py  module.yaml
modules/agent-dashboard-ce/: entry.py  module.yaml
modules/approval-gate/: doctor.sh  entry.py  module.yaml  reconcile.sh
modules/argentina-ce/: module.yaml
modules/business-ce/: module.yaml
modules/check-linkedin-autopost-policy-ce/: entry.py  module.yaml
modules/chronicle-ce/: entry.py  module.yaml  reconcile.sh
modules/claude-skills-sync/: doctor.sh  entry.py  module.yaml  reconcile.sh
modules/context-assembler-ce/: entry.py  module.yaml
modules/dreaming/: doctor.sh  dream.sh  reconcile.sh
modules/endocrine/: reconcile.sh  regulate.py
modules/goal-runner/: doctor.sh  run.sh
modules/google-ads-ce/: entry.py
modules/heartbeat/: doctor.sh  module.yaml  pulse.sh
modules/identity-ce/: entry.py  module.yaml
npm-wrapper/: package.json
plan/: ARCHITECTURE.md  EXECUTION_RULES.md  GLOSSARY.md  PROTOCOL_SPEC.md  README.md
scripts/: verify_absorb_behavior_contract.py  verify_llm_autodiscovery.py
sz/: __init__.py
tests/: test_llm_provider_resolution.py
tooling/: bootstrap.sh  generate-tooling-report.py  retry-dns.sh  retry-hostinger-dns.sh  retry-stripe-create.sh
tools/: anonymize.py  connection_engine_survey.py  export_module_repos.py  reconstruct_connection_engine.py  validate-spec.py
website/: Caddyfile  Dockerfile  app.js  canvas.js  fly.toml  index.html  pricing.html  style.css
(+411 files in other folders)
