[project]
name = "sz-cli"
version = "0.1.0"
description = "One-click autonomy and self-improvement for any repository."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = [
  "agentic-ai",
  "autonomous-agents",
  "developer-tools",
  "llm",
  "protocol",
  "repository-automation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.20",
  "click>=8.1",
  "rich>=13.7",
  "platformdirs>=4.2",
]

[project.scripts]
sz = "sz.commands.cli:main"

[project.urls]
Homepage = "https://systemzero.dev"
Source = "https://github.com/avibrahms/system-zero"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sz*"]

[tool.setuptools.package-data]
sz = ["adapters/*/*.sh", "adapters/*/*.yaml", "templates/*.md", "spec/v0.1.0/*.json", "spec/v0.1.0/*.yaml", "spec/v0.1.0/llm-responses/*.json"]
